gitops/apps/nasochnek/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nasochnek
  labels:
    app.kubernetes.io/name: nasochnek
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nasochnek
  ports:
    - name: http
      port: 80
      targetPort: http
